Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8022

Regression: No more warning when stopping profiled Qt Quick UI outside the Analyzer

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 2.6.0
    • Qt Creator 2.6.0-rc
    • QML Profiler
    • Ubuntu 12.04 64 bit
      Qt 4.8.3
    • Change-Id: I6fc53127b5dfe41de112e140b77895d430d3f79c

      1. Open a Qt Quick UI.
      2. Switch to Analyze mode and select QML Profiler.
      3. Click the Analyzer's small start button.
        Analyzing starts.
      4. Close the window of the Qt Quick UI directly using the operating system's close button.
        The window will be closed, no data will be shown in QML Profiler.

      Creator 2.4 showed a message box in the case, telling the user to stop the Qt Quick UI using the QML Profiler's stop button. If Creator can't handle the measured data when closing the window directly, it should show the message box again.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cjanssen Christiaan Janssen (Inactive)
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes